Aplica alterações solicitadas no review do PR #2
Atende aos comentários do review (changes requested) em LojaApp#2:

- URI.CategoriasLista: usa Stream.toList() no lugar de collect(Collectors.toList())
- ClienteNewDto: telefones vira List<String>; campos de endereço extraídos
  para o novo record EnderecoNewDto; cidadeId removido do topo (movido p/ endereço)
- ClienteService.toCliente: ajustado para o novo formato do DTO
- Cpf: validação de CPF via biblioteca Caelum Stella (caelum-stella-core 2.2.1)
  no construtor do record @Embeddable
- data.sql: mais volume (produtos, clientes, telefones, endereços, pedidos,
  pagamentos e itens); CPFs do seed com dígito verificador válido
- CpfTest: cobre CPFs válidos (mesma massa do seed), normalização e rejeição de inválidos

Decisões confirmadas com o autor: mantido @CPF do Hibernate no DTO e H2 apenas
em escopo de teste (sem remoção).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>